src/parser.output
Nonterminals useless in grammar

    err


Terminals unused in grammar

    EQUAL
    COLON
    COMMA
    ARROW
    INT
    VOID
    FLOAT
    BOOL
    IF
    ELSE
    FOR
    WHILE
    RETURN
    LET
    MUTABLE
    LEXERROR


Rules useless in grammar

   31 err: LEXERROR


Grammar

    0 $accept: functions $end

    1 functions: %empty
    2          | functions function

    3 function: FUNCTION IDENTIFIER LPAREN RPAREN statementblock

    4 statementblock: LBRACE statements RBRACE

    5 statements: %empty
    6           | statements statement
    7           | statements statementblock

    8 statement: exp SEMICOLON

    9 exp: NUMBER
   10    | STRING
   11    | DOUBLE
   12    | TRUE
   13    | FALSE
   14    | NULLTOK
   15    | IDENTIFIER
   16    | exp PLUS exp
   17    | exp MINUS exp
   18    | exp TIMES exp
   19    | exp DIVIDE exp
   20    | exp MORETHAN exp
   21    | exp LESSTHAN exp
   22    | exp MOREEQUAL exp
   23    | exp LESSEQUAL exp
   24    | exp EQUALEQUAL exp
   25    | exp BANGEQUAL exp
   26    | exp AND exp
   27    | exp OR exp
   28    | NOT exp
   29    | MINUS exp
   30    | LPAREN exp RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <str> (258) 9
    STRING <str> (259) 10
    DOUBLE <str> (260) 11
    IDENTIFIER <str> (261) 3 15
    TRUE <str> (262) 12
    FALSE <str> (263) 13
    NULLTOK <str> (264) 14
    DIVIDE <str> (265) 19
    TIMES <str> (266) 18
    PLUS <str> (267) 16
    MINUS <str> (268) 17 29
    NOT <str> (269) 28
    EQUAL <str> (270)
    EQUALEQUAL <str> (271) 24
    BANGEQUAL <str> (272) 25
    LESSEQUAL <str> (273) 23
    MOREEQUAL <str> (274) 22
    LESSTHAN <str> (275) 21
    MORETHAN <str> (276) 20
    OR <str> (277) 27
    AND <str> (278) 26
    SEMICOLON <str> (279) 8
    LBRACE <str> (280) 4
    RBRACE <str> (281) 4
    LPAREN <str> (282) 3 30
    RPAREN <str> (283) 3 30
    COLON <str> (284)
    COMMA <str> (285)
    ARROW <str> (286)
    INT <str> (287)
    VOID <str> (288)
    FLOAT <str> (289)
    BOOL <str> (290)
    FUNCTION <str> (291) 3
    IF <str> (292)
    ELSE <str> (293)
    FOR <str> (294)
    WHILE <str> (295)
    RETURN <str> (296)
    LET <str> (297)
    MUTABLE <str> (298)
    LEXERROR <str> (299)
    UNARY (300)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    functions <funcs> (47)
        on left: 1 2
        on right: 0 2
    function <func> (48)
        on left: 3
        on right: 2
    statementblock <stat> (49)
        on left: 4
        on right: 3 7
    statements <stats> (50)
        on left: 5 6 7
        on right: 4 6 7
    statement <stat> (51)
        on left: 8
        on right: 6
    exp <expr> (52)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 8 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30


State 0

    0 $accept: . functions $end

    $default  reduce using rule 1 (functions)

    functions  go to state 1


State 1

    0 $accept: functions . $end
    2 functions: functions . function

    $end      shift, and go to state 2
    FUNCTION  shift, and go to state 3

    function  go to state 4


State 2

    0 $accept: functions $end .

    $default  accept


State 3

    3 function: FUNCTION . IDENTIFIER LPAREN RPAREN statementblock

    IDENTIFIER  shift, and go to state 5


State 4

    2 functions: functions function .

    $default  reduce using rule 2 (functions)


State 5

    3 function: FUNCTION IDENTIFIER . LPAREN RPAREN statementblock

    LPAREN  shift, and go to state 6


State 6

    3 function: FUNCTION IDENTIFIER LPAREN . RPAREN statementblock

    RPAREN  shift, and go to state 7


State 7

    3 function: FUNCTION IDENTIFIER LPAREN RPAREN . statementblock

    LBRACE  shift, and go to state 8

    statementblock  go to state 9


State 8

    4 statementblock: LBRACE . statements RBRACE

    $default  reduce using rule 5 (statements)

    statements  go to state 10


State 9

    3 function: FUNCTION IDENTIFIER LPAREN RPAREN statementblock .

    $default  reduce using rule 3 (function)


State 10

    4 statementblock: LBRACE statements . RBRACE
    6 statements: statements . statement
    7           | statements . statementblock

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LBRACE      shift, and go to state 8
    RBRACE      shift, and go to state 20
    LPAREN      shift, and go to state 21

    statementblock  go to state 22
    statement       go to state 23
    exp             go to state 24


State 11

    9 exp: NUMBER .

    $default  reduce using rule 9 (exp)


State 12

   10 exp: STRING .

    $default  reduce using rule 10 (exp)


State 13

   11 exp: DOUBLE .

    $default  reduce using rule 11 (exp)


State 14

   15 exp: IDENTIFIER .

    $default  reduce using rule 15 (exp)


State 15

   12 exp: TRUE .

    $default  reduce using rule 12 (exp)


State 16

   13 exp: FALSE .

    $default  reduce using rule 13 (exp)


State 17

   14 exp: NULLTOK .

    $default  reduce using rule 14 (exp)


State 18

   29 exp: MINUS . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 25


State 19

   28 exp: NOT . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 26


State 20

    4 statementblock: LBRACE statements RBRACE .

    $default  reduce using rule 4 (statementblock)


State 21

   30 exp: LPAREN . exp RPAREN

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 27


State 22

    7 statements: statements statementblock .

    $default  reduce using rule 7 (statements)


State 23

    6 statements: statements statement .

    $default  reduce using rule 6 (statements)


State 24

    8 statement: exp . SEMICOLON
   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp

    DIVIDE      shift, and go to state 28
    TIMES       shift, and go to state 29
    PLUS        shift, and go to state 30
    MINUS       shift, and go to state 31
    EQUALEQUAL  shift, and go to state 32
    BANGEQUAL   shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    MOREEQUAL   shift, and go to state 35
    LESSTHAN    shift, and go to state 36
    MORETHAN    shift, and go to state 37
    OR          shift, and go to state 38
    AND         shift, and go to state 39
    SEMICOLON   shift, and go to state 40


State 25

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp
   29    | MINUS exp .

    $default  reduce using rule 29 (exp)


State 26

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp
   28    | NOT exp .

    $default  reduce using rule 28 (exp)


State 27

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp
   30    | LPAREN exp . RPAREN

    DIVIDE      shift, and go to state 28
    TIMES       shift, and go to state 29
    PLUS        shift, and go to state 30
    MINUS       shift, and go to state 31
    EQUALEQUAL  shift, and go to state 32
    BANGEQUAL   shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    MOREEQUAL   shift, and go to state 35
    LESSTHAN    shift, and go to state 36
    MORETHAN    shift, and go to state 37
    OR          shift, and go to state 38
    AND         shift, and go to state 39
    RPAREN      shift, and go to state 41


State 28

   19 exp: exp DIVIDE . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 42


State 29

   18 exp: exp TIMES . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 43


State 30

   16 exp: exp PLUS . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 44


State 31

   17 exp: exp MINUS . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 45


State 32

   24 exp: exp EQUALEQUAL . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 46


State 33

   25 exp: exp BANGEQUAL . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 47


State 34

   23 exp: exp LESSEQUAL . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 48


State 35

   22 exp: exp MOREEQUAL . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 49


State 36

   21 exp: exp LESSTHAN . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 50


State 37

   20 exp: exp MORETHAN . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 51


State 38

   27 exp: exp OR . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 52


State 39

   26 exp: exp AND . exp

    NUMBER      shift, and go to state 11
    STRING      shift, and go to state 12
    DOUBLE      shift, and go to state 13
    IDENTIFIER  shift, and go to state 14
    TRUE        shift, and go to state 15
    FALSE       shift, and go to state 16
    NULLTOK     shift, and go to state 17
    MINUS       shift, and go to state 18
    NOT         shift, and go to state 19
    LPAREN      shift, and go to state 21

    exp  go to state 53


State 40

    8 statement: exp SEMICOLON .

    $default  reduce using rule 8 (statement)


State 41

   30 exp: LPAREN exp RPAREN .

    $default  reduce using rule 30 (exp)


State 42

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   19    | exp DIVIDE exp .
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp

    $default  reduce using rule 19 (exp)


State 43

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   18    | exp TIMES exp .
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp

    $default  reduce using rule 18 (exp)


State 44

   16 exp: exp . PLUS exp
   16    | exp PLUS exp .
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp

    DIVIDE  shift, and go to state 28
    TIMES   shift, and go to state 29

    $default  reduce using rule 16 (exp)


State 45

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   17    | exp MINUS exp .
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp

    DIVIDE  shift, and go to state 28
    TIMES   shift, and go to state 29

    $default  reduce using rule 17 (exp)


State 46

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   24    | exp EQUALEQUAL exp .
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp

    DIVIDE  shift, and go to state 28
    TIMES   shift, and go to state 29
    PLUS    shift, and go to state 30
    MINUS   shift, and go to state 31

    $default  reduce using rule 24 (exp)


State 47

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   25    | exp BANGEQUAL exp .
   26    | exp . AND exp
   27    | exp . OR exp

    DIVIDE  shift, and go to state 28
    TIMES   shift, and go to state 29
    PLUS    shift, and go to state 30
    MINUS   shift, and go to state 31

    $default  reduce using rule 25 (exp)


State 48

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   23    | exp LESSEQUAL exp .
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp

    DIVIDE  shift, and go to state 28
    TIMES   shift, and go to state 29
    PLUS    shift, and go to state 30
    MINUS   shift, and go to state 31

    $default  reduce using rule 23 (exp)


State 49

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   22    | exp MOREEQUAL exp .
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp

    DIVIDE  shift, and go to state 28
    TIMES   shift, and go to state 29
    PLUS    shift, and go to state 30
    MINUS   shift, and go to state 31

    $default  reduce using rule 22 (exp)


State 50

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   21    | exp LESSTHAN exp .
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp

    DIVIDE  shift, and go to state 28
    TIMES   shift, and go to state 29
    PLUS    shift, and go to state 30
    MINUS   shift, and go to state 31

    $default  reduce using rule 21 (exp)


State 51

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   20    | exp MORETHAN exp .
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp

    DIVIDE  shift, and go to state 28
    TIMES   shift, and go to state 29
    PLUS    shift, and go to state 30
    MINUS   shift, and go to state 31

    $default  reduce using rule 20 (exp)


State 52

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   27    | exp . OR exp
   27    | exp OR exp .

    DIVIDE      shift, and go to state 28
    TIMES       shift, and go to state 29
    PLUS        shift, and go to state 30
    MINUS       shift, and go to state 31
    EQUALEQUAL  shift, and go to state 32
    BANGEQUAL   shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    MOREEQUAL   shift, and go to state 35
    LESSTHAN    shift, and go to state 36
    MORETHAN    shift, and go to state 37

    $default  reduce using rule 27 (exp)


State 53

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . MORETHAN exp
   21    | exp . LESSTHAN exp
   22    | exp . MOREEQUAL exp
   23    | exp . LESSEQUAL exp
   24    | exp . EQUALEQUAL exp
   25    | exp . BANGEQUAL exp
   26    | exp . AND exp
   26    | exp AND exp .
   27    | exp . OR exp

    DIVIDE      shift, and go to state 28
    TIMES       shift, and go to state 29
    PLUS        shift, and go to state 30
    MINUS       shift, and go to state 31
    EQUALEQUAL  shift, and go to state 32
    BANGEQUAL   shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    MOREEQUAL   shift, and go to state 35
    LESSTHAN    shift, and go to state 36
    MORETHAN    shift, and go to state 37

    $default  reduce using rule 26 (exp)
